templates and email configurations

--- a/core/src/main/resources/templates/email/email_template_user_password_link.html
+++ b/core/src/main/resources/templates/email/email_template_user_password_link.html
@@ -24,63 +24,21 @@
 							<tr>
 								<td style="color:#333333; padding:16px 45px 0px; fomnt-family:Arial,sans-serif;" align="left">
 									<p style="margin:0px 0 10px;font-size:12px;font-weight:normal;line-height:20px;">Dear <b>${EMAIL_USER_FIRSTNAME}  ${EMAIL_USER_LASTNAME}</b>,</p>
-									<!--<p style="color:333;font-size:12px;line-height:15px;margin:0">Greetings from www.onesevenhome.com</p>-->
-									<p style="color:333;font-size:12px;line-height:15px;margin:10px 0 10px 0;">Thank you for chosing ${EMAIL_SERVICE_TYPE} offered by www.onesevenhome.com. We hope you are happy with our services.</p>
-									<p style="color:333;font-size:12px;line-height:15px;margin:10px 0 10px 0;">Our comments: <b>${ADMIN_VENDOR_BOOKING_COMMENT}</b></p>
+									<p style="color:333;font-size:12px;line-height:15px;margin:0">Greetings from www.onesevenhome.com</p>
+									<p style="color:333;font-size:12px;line-height:15px;margin:10px 0 10px 0;">Your login id is: <b>${EMAIL_USER_NAME}</b></p>
+									<p style="color:333;font-size:12px;line-height:15px;">Please click on below link to reset your password
+									</p>
+								</td>
+							</tr>
+							
+							<tr>
+								<td style="color:#fff; padding:20px 0 15px; fomnt-family:Arial,sans-serif;display:block;" align="center">
+								<a href="${EMAIL_PASSWORD_LINK}" style="color:#fff; background-color:#e95435; font-size:15px; padding:8px 16px; text-decoration:none; display:inline-block;" target="_blank">
+								Click here to reset your password with OneSevenHome</a>
 								</td>
 							</tr>
 					    </tbody>
 				    </table>
-				    <!--<table width="700" cellspacing="0" cellpadding="0" border="0" align="left" style="background:#fff;border-top:3px solid #eaeced;border-bottom:3px solid #eaeced;clear:both">
-					    <tbody>
-							<tr>
-								<td align="center" style="color:#333333">
-									<p style="margin:45px 0;font-size:22px;font-weight:bold;line-height:20px">${EMAIL_VENDOR_NAME} </p>
-								</td>
-							</tr>
-					    </tbody>
-				    </table> -->
-					 <!-- <table width="700" cellspacing="0" cellpadding="0" border="0" align="left" style="background:#ededed;border-top:3px solid #eaeced;border-bottom:3px solid #eaeced;clear:both">
-					    <tbody>
-							<tr>
-								<td class="m_-6508970810580465838m_9166124052267274536m_6698583959415294282section-padding" style="padding:0 36px 36px">
-									<table width="100%" cellspacing="0" cellpadding="0" border="0">
-										<tbody>
-											<tr align="left">
-												<td width="100%" align="left">
-												    <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:700px">
-                                                        <tbody><tr>
-															<td width="100%" align="left" valign="top" class="m_-6508970810580465838m_9166124052267274536m_6698583959415294282padding">
-															    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-																	<tbody><tr>
-																		<td align="middle" valign="top">
-																		    <a href="#" target="_blank" data-saferedirecturl="#">
-																			   <img src="${EMAIL_VENDOR_IMAGE}" width="300" height="250" border="0" class="CToWUd">																			</a>																		</td>
-																	</tr>
-																	<tr>
-																		<td width="299" align="middle">
-																		  <table bgcolor="#fff" cellpadding="0" cellspacing="0" border="0" width="100%" style="width:299px;padding:20px 13px 16px 13px;border-bottom:4px solid #85a7a9">
-																				<tbody><tr>
-																					<td align="left" style="color:#333;font-size:16px;font-weight:bold;padding-bottom:13px">
-																						<span>Rating: Specify Ratings</span>
-																					</td>
-																				</tr>
-																		  </tbody></table>
-																		</td>
-																	</tr>
-																</tbody></table>
-															</td>
-													    </tr>
-													</tbody></table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-
-					    </tbody>
-					</table>
 				</td>
 			</tr>
 
@@ -88,21 +46,21 @@
 			  <td>&nbsp;</td>
 			</tr>
 		</tbody>
-  </table> -->
+  </table>
 	<table width="700" border="0" align="center" cellpadding="0" cellspacing="0"  >
       <tbody>
         <tr style="  ">
           <td style="color:#000000; background:#fff; padding:20px;"><p style="margin-top:0;font-size:14px;font-weight:normal;line-height:20px;margin-bottom:10px; font-family:Arial, Helvetica, sans-serif; "><b>About OneSevenHome</b></p>
               <p style="font-size:11px;font-family:Arial,sans-serif;line-height:15px;margin-bottom:10px">OneSevenHome is India's largest B2B marketplace for all kind of materials such as Bricks, Cement, Sand, Wood, Sanitary, Interiors etc. OneSevenHome provides a unique platform for connecting Vendors with Builders and Contractors.</p></td>
         </tr>
-      <tr>
+        <tr>
           <td align="center" valign="top" bgcolor="#000000"><div class="social-links"><a href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a> <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a> <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a> </div>
               <table height="41" cellspacing="10" cellpadding="0" border="0">
                 <tbody>
-                 <tr>
-                    <td><a href="#" style="text-decoration:none" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en&amp;q=http://msupply.us12.list-manage.com/track/click?u%3D3b0e84c9f9c844a0179cc0a62%26id%3D0e4084eda1%26e%3D7fffac015d&amp;source=gmail&amp;ust=1503850177213000&amp;usg=AFQjCNH0fqt0m2NRfxbfx1uOHBo3FOwXOA"><img src="${EMAIL_URL_LINK}fb.jpg" alt="facebook"   width="25" height="25" border="0" class="CToWUd"> </a></td>
-                    <td><a href="#" style="text-decoration:none" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en&amp;q=http://msupply.us12.list-manage2.com/track/click?u%3D3b0e84c9f9c844a0179cc0a62%26id%3D608ffe4f16%26e%3D7fffac015d&amp;source=gmail&amp;ust=1503850177213000&amp;usg=AFQjCNG0KsPn79g4bg7BHeulsxVozr7lFw"><img src="${EMAIL_URL_LINK}ins.jpg" alt="twitter"   width="25" height="25" border="0" class="CToWUd"> </a></td>
-                    <td><a href="#" style="text-decoration:none" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en&amp;q=http://msupply.us12.list-manage.com/track/click?u%3D3b0e84c9f9c844a0179cc0a62%26id%3D00b1169cbc%26e%3D7fffac015d&amp;source=gmail&amp;ust=1503850177213000&amp;usg=AFQjCNG-RTPRz4mCGueFekEPr_QrGD4KMw"><img src="${EMAIL_URL_LINK}tw.jpg" alt="googleplus"  width="25" height="25" border="0" class="CToWUd"> </a></td>
+                  <tr>
+                    <td><a href="#" style="text-decoration:none" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en&amp;q=http://msupply.us12.list-manage.com/track/click?u%3D3b0e84c9f9c844a0179cc0a62%26id%3D0e4084eda1%26e%3D7fffac015d&amp;source=gmail&amp;ust=1503850177213000&amp;usg=AFQjCNH0fqt0m2NRfxbfx1uOHBo3FOwXOA"><img src="http://rainiersoft.com/clients/onesevenhome/img/fb.jpg" alt="facebook"   width="25" height="25" border="0" class="CToWUd"> </a></td>
+                    <td><a href="#" style="text-decoration:none" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en&amp;q=http://msupply.us12.list-manage2.com/track/click?u%3D3b0e84c9f9c844a0179cc0a62%26id%3D608ffe4f16%26e%3D7fffac015d&amp;source=gmail&amp;ust=1503850177213000&amp;usg=AFQjCNG0KsPn79g4bg7BHeulsxVozr7lFw"><img src="http://rainiersoft.com/clients/onesevenhome/img/ins.jpg" alt="twitter"   width="25" height="25" border="0" class="CToWUd"> </a></td>
+                    <td><a href="#" style="text-decoration:none" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en&amp;q=http://msupply.us12.list-manage.com/track/click?u%3D3b0e84c9f9c844a0179cc0a62%26id%3D00b1169cbc%26e%3D7fffac015d&amp;source=gmail&amp;ust=1503850177213000&amp;usg=AFQjCNG-RTPRz4mCGueFekEPr_QrGD4KMw"><img src="http://rainiersoft.com/clients/onesevenhome/img/tw.jpg" alt="googleplus"  width="25" height="25" border="0" class="CToWUd"> </a></td>
                   </tr>
                 </tbody>
             </table></td>
